# payroll-copilot

./: .env.docker.example  .env.example  .env.local.example  .env.production.example  .gitignore  ARCHITECTURE.md  README.md  alembic.ini  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 002_document_extractions.py  003_employee_status_disabled.py  004_user_employee_binding.py  005_extraction_confirmation.py  006_employee_payroll_accountant.py
backend/config/: ai_models.yaml
backend/mcp/: legal_sync_server.py
backend/scripts/dev/: extract_fixture_review.py  seed_accountant_portal.py
backend/src/payroll_copilot/: __init__.py
backend/tests/: conftest.py
backend/tests/integration/: test_accountant_scope_api.py  test_analytics_api.py  test_api.py  test_assistant_api.py  test_document_persistence.py  test_validation_persistence.py
backend/tests/unit/: test_accountant_employee_scope.py  test_accountant_portal_foundation.py  test_accountant_portal_seed.py  test_ai_observability.py  test_ai_provider_router.py  test_ai_telemetry.py  test_analytics_phase1a.py  test_analytics_quality.py  test_answer_strategy_orchestration.py  test_assistant_intent_and_templates.py  test_batch_payslip_pipeline.py  test_batch_processor.py  test_batch_progress_store.py  test_bedrock_provider.py  test_correct_guest_extraction.py  test_delete_employee_document.py  test_dev_employee_bootstrap.py  test_document_lab.py  test_document_validation_registries.py  test_dynamodb_empty_pruning.py  test_email_ses.py  test_employee_ai_context_builder.py  test_employee_document_form_schemas.py  test_employee_document_lifecycle.py  test_employee_document_workspace.py  test_employee_extraction_confirmation.py  test_employee_finding_explanation.py  test_employee_fixed_document_extractor.py  test_employee_payroll_accountant_id.py  test_employee_payroll_months.py  test_employee_payslip_policies.py  test_employee_update_contract.py  test_employee_workspace_snapshot.py  test_evidence_bound_phase3.py  test_explainability_phase4.py  test_fixture_document_loader.py  test_guest_cancel_check.py  test_guest_confirm_route.py  test_guest_empty_extraction.py  (+32 more)
(+560 files in other folders)
